# bake

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: CI.yaml
docs/: USAGE.md
src/: commands.rs  decode.rs  encode.rs  lib.rs  main.rs  transform.rs
src/decode/: base32.rs  base58.rs  base64.rs  base85.rs  base91.rs  binary.rs  hex.rs  html_entity.rs  punycode.rs  quoted_printable.rs  unicode_escape.rs  url.rs
src/encode/: base32.rs  base58.rs  base64.rs  base85.rs  base91.rs  binary.rs  defang.rs  hex.rs  html_entity.rs  punycode.rs  quoted_printable.rs  unicode_escape.rs  url.rs
src/transform/: aes_gcm.rs  charset.rs  checksum.rs  compress.rs  data_convert.rs  date.rs  dns.rs  gzip.rs  hash.rs  json_tools.rs  jwt.rs  kdf.rs  network.rs  regex_replace.rs  symmetric.rs  text_extra.rs  unicode.rs  xml_tools.rs  xor.rs
