[package]
name = "chef"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.97"
base64 = "0.22.1"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
data-encoding = "2.10.0"
encoding_rs = "0.8.35"
flate2 = "1.1.9"
ipnet = "2.11.0"
md-5 = "0.10.6"
nom = "8.0.0"
percent-encoding-rfc3986 = "0.1.3"
regex = "1.12.3"
sha1 = "0.10.6"
sha2 = "0.10.9"
unicode-normalization = "0.1.25"
