[package]
name = "chef"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.101"
ascii85 = "0.2.1"
base64 = "0.22.1"
bs58 = "0.5.1"
bzip2 = "0.6.1"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.57"
crc = "3.4.0"
data-encoding = "2.10.0"
encoding_rs = "0.8.35"
flate2 = "1.1.9"
hmac = "0.12.1"
idna = "1.1.0"
ipnet = "2.11.0"
jsonpath_lib = "0.3.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto", "use_pem"] }
md-5 = "0.10.6"
nom = "8.0.0"
percent-encoding-rfc3986 = "0.1.3"
regex = "1.12.3"
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.9"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
unicode-normalization = "0.1.25"
xmltree = "0.12.0"
xz2 = "0.1.7"
