[package]
name = "bake"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.101"
arc4 = "0.1.0"
argon2 = "0.5.3"
ascii85 = "0.2.1"
base64 = "0.22.1"
base91 = "0.1.0"
bs58 = "0.5.1"
bzip2 = "0.6.1"
cbc = { version = "0.1.2", features = ["alloc"] }
chacha20 = "0.9.1"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.57"
crc = "3.4.0"
csv = "1.3.1"
ctr = "0.9.2"
data-encoding = "2.10.0"
ecb = { version = "0.1.2", features = ["alloc"] }
encoding_rs = "0.8.35"
flate2 = "1.1.9"
hmac = "0.12.1"
idna = "1.1.0"
ipnet = "2.11.0"
jsonpath_lib = "0.3.0"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto", "use_pem"] }
md-5 = "0.10.6"
nom = "8.0.0"
pbkdf2 = "0.12.2"
percent-encoding-rfc3986 = "0.1.3"
quoted_printable = "0.5.1"
regex = "1.12.3"
scrypt = "0.11.0"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sha2 = "0.10.9"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
toml = "0.8.23"
unicode-normalization = "0.1.25"
url = "2.5.4"
xmltree = "0.12.0"
xz2 = "0.1.7"
